Renamed keys, add ring buffer